[package]
name = "libpulse-sys"
version = "0.0.0"
authors = ["Astro <astro@spaceboyz.net>"]
description = "Pulseaudio binding for Rust generated with rust-bindgen"
repository = "https://github.com/astro/libpulse-sys"
license-file = "LICENSE"

[dependencies]
libc = "*"

[build-dependencies]
bindgen = "0.32.2"
pkg-config = "0.3.9"

